Closed
Bug 822086
Opened 13 years ago
Closed 12 years ago
"ASSERTION: Shouldn't be trying to draw with a singular matrix!"
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: jruderman, Assigned: mattwoodrow)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files, 2 obsolete files)
172 bytes,
application/xhtml+xml
|
Details | |
6.18 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Shouldn't be trying to draw with a singular matrix!: '!aMatrix.IsSingular()', file Layers.h, line 732
This assertion was added in bug 810302.
Assignee | ||
Comment 1•13 years ago
|
||
Interesting.
We create a matrix for the nsDisplayTransform which isn't singular:
(gdb) p newTransformMatrix
$2 = (const gfx3DMatrix &) @0x1123d7ce0: {
_11 = 2575,
_12 = 278,
_13 = 3,
_14 = 4,
_21 = 5153,
_22 = 558,
_23 = 7,
_24 = 8,
_31 = 7731,
_32 = 838,
_33 = 11,
_34 = 12,
_41 = -1667315.5,
_42 = -180007,
_43 = -1943.5,
_44 = -2590
}
and then call NudgeToIntegers on it in ChooseScaleAndSetTransform:
(gdb) p transform
$3 = {
_11 = 2575,
_12 = 278,
_13 = 3,
_14 = 4,
_21 = 5153,
_22 = 558,
_23 = 7,
_24 = 8,
_31 = 7731,
_32 = 838,
_33 = 11,
_34 = 12,
_41 = -1667315,
_42 = -180007,
_43 = -1943.5,
_44 = -2590
}
Apparently rounding the _41 value makes this singular.
I guess we should check for singularity again at some point and bail out.
Assignee | ||
Comment 2•12 years ago
|
||
Attachment #722515 -
Flags: review?(roc)
Assignee | ||
Comment 3•12 years ago
|
||
Right patch this time hopefully
Attachment #722515 -
Attachment is obsolete: true
Attachment #722515 -
Flags: review?(roc)
Attachment #722524 -
Flags: review?(roc)
Comment on attachment 722524 [details] [diff] [review]
Bail out if we end up with a singular matrix v2
Review of attachment 722524 [details] [diff] [review]:
-----------------------------------------------------------------
Can we avoid adding an extra IsSingular check by removing the existing one?
Assignee | ||
Comment 5•12 years ago
|
||
You mean the one in nsDisplayTransform?
Assignee | ||
Comment 6•12 years ago
|
||
Attachment #722524 -
Attachment is obsolete: true
Attachment #722524 -
Flags: review?(roc)
Attachment #722627 -
Flags: review?(roc)
Attachment #722627 -
Flags: review?(roc) → review+
Assignee | ||
Comment 7•12 years ago
|
||
Comment 8•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/42694e9f60a7
https://hg.mozilla.org/mozilla-central/rev/3d83421e9ca4
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Reporter | ||
Updated•12 years ago
|
Assignee: nobody → matt.woodrow
You need to log in
before you can comment on or make changes to this bug.
Description
•