Bug 822086 - Don't build ContainerLayers that would have a singular matrix. r=roc